@@ -170,7 +170,7 @@
   doi = {10.1103/PhysRevA.67.042308},
 }
 
-@article{Uhrig,
+@article{Uhrig2007,
   title = {Keeping a Quantum Bit Alive by Optimized $\ensuremath{\pi}$-Pulse Sequences},
   author = {Uhrig, G\"otz S.},
   journal = {Phys. Rev. Lett.},
