@@ -195,12 +195,13 @@ b bugfix
               * utils/unravel_index works on vectors of indices
               * utils/tensorbasis returns the integer locality of each element
               * utils/tensorsum can now handle matrices and any number of inputs
+              * utils/fermion_ladder simplified
               * seq: sign convention changed
               - seq/cpmg
-              + seq/knill
               + seq/dd
+              + seq/knill
+              b seq/scrofulous now uses the phi parameter
               * markov/bath class rewritten, now supports fermionic baths as well
               b markov/ops: warns of possible RWA violations
-              b seq/scrofulous now uses the phi parameter
               * invariant/LU uses lmap/tensorpow
               + more test scripts
